--- a/configs/data/proto.yaml
+++ b/configs/data/proto.yaml
@@ -4,3 +4,5 @@ batch_size: 128 # Needs to be divisible by the number of devices (e.g., if in a 
 train_val_test_split: [55_000, 5_000, 10_000]
 num_workers: 0
 pin_memory: False
+alpha: 20.0
+sigma: 4.0
