add F1 score metrics

--- a/configs/proto.yaml
+++ b/configs/proto.yaml
@@ -7,7 +7,7 @@ defaults:
   - data: proto
   - model: proto
   - callbacks: default
-  - logger: wandb # set logger here or use command line (e.g. `python train.py logger=tensorboard`)
+  - logger: Wandb # set logger here or use command line (e.g. `python train.py logger=tensorboard`)
   - trainer: default
   - paths: default
   - extras: default
